# Qt-Advanced-Docking-System

./: .appveyor.yml  .astylerc  .clang-format  .cproject  .gitignore  .travis.yml  BUILDING.md  CMakeLists.txt  LICENSE.md  README.md  ads.pri  ads.pro  adsConfig.cmake  build.pro  project.py  pyproject.toml  setup.py  simple.py
.github/workflows/: actions_test.yml  linux-builds.yml
AdvancedDockingSystem/: AdvancedDockingSystem.pri  AdvancedDockingSystem.pro  README.md
AdvancedDockingSystem/include/ads/: API.h  ContainerWidget.h  ContainerWidget_p.h  DropOverlay.h  FloatingWidget.h  Internal.h  MainContainerWidget.h  SectionContent.h  SectionContentWidget.h  SectionTitleWidget.h  SectionWidget.h  Serialization.h
AdvancedDockingSystem/res/: ads.qrc
AdvancedDockingSystem/res/stylesheets/: default-windows.css  default-windows2.css  modern-windows.css  vendor-partsolutions.css
AdvancedDockingSystem/src/: API.cpp  API.h  ContainerWidget.cpp  ContainerWidget.h  DropOverlay.cpp  DropOverlay.h  FloatingWidget.cpp  FloatingWidget.h  Internal.cpp  Internal.h  MainContainerWidget.cpp  MainContainerWidget.h  SectionContent.cpp  SectionContent.h  SectionContentWidget.cpp  SectionContentWidget.h  SectionTitleWidget.cpp  SectionTitleWidget.h  SectionWidget.cpp  SectionWidget.h  Serialization.cpp  Serialization.h
AdvancedDockingSystem/src/ads/: ads.cpp  ads.h  container_widget.cpp  container_widget.h  (+12 more)
AdvancedDockingSystemDemo/: AdvancedDockingSystemDemo.pro
AdvancedDockingSystemDemo/src/: icontitlewidget.cpp  icontitlewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AdvancedDockingSystemDemo_v2/: AdvancedDockingSystemDemo_v2.pro
AdvancedDockingSystemDemo_v2/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
AdvancedDockingSystemUnitTests/: AdvancedDockingSystemUnitTests.pri  AdvancedDockingSystemUnitTests.pro
AdvancedDockingSystemUnitTests/src/: TestCore.cpp  TestCore.h  main.cpp
LayoutManager/: LayoutManager.pro  LayoutManagerWidget.cpp  LayoutManagerWidget.h  layoutmanagerwidget.ui
PyQtAds/: __init__.py  _version.py  rc.py
PyQtAds/QtAds/: __init__.py
cmake/: install-config.cmake  install-rules.cmake  variables.cmake
demo/: CMakeLists.txt  ImageViewer.cpp  ImageViewer.h  MainWindow.cpp  MainWindow.h  RenderWidget.cpp  RenderWidget.h  app.rc  demo.pro  demo.py  demo.qrc  main.cpp  main.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  status_dialog.py
doc/: ads_qt_marketplace_description.md  ads_qt_marketplace_manifest.json  user-guide.md
example/: CMakeLists.txt  example.pro  icontitlewidget.cpp  icontitlewidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
example/dialogs/: SectionContentListModel.cpp  SectionContentListModel.h  SectionContentListWidget.cpp  SectionContentListWidget.h
examples/: CMakeLists.txt  examples.pro
examples/autohide/: CMakeLists.txt  autohide.pro  main.py  mainwindow.cpp
examples/centralWidget/: CMakeLists.txt  centralWidget.pro  digitalclock.cpp  digitalclock.h  main.cpp  mainwindow.cpp  mainwindow.ui
examples/centralwidget/: CMakeLists.txt  autohide.pro  centralWidget.py  centralwidget.pro  mainwindow.cpp
examples/deleteonclose/: CMakeLists.txt  deleteonclose.pro  main.cpp  main.py
examples/dockdepth1/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  dockdepth1.pro  innertabs.cpp  innertabs.h
examples/dockindock/: CMakeLists.txt  dockindock.cpp  dockindock.py  dockindockmanager.cpp  dockindockmanager.py  main.cpp  main.py  perspectives.cpp  perspectives.py
examples/emptydockarea/: CMakeLists.txt  main.py  mainwindow.cpp
examples/hideshow/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  hideshow.pro  main.cpp
examples/sidebar/: CMakeLists.txt  MainWindow.cpp  main.py  sidebar.pro
examples/simple/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.py  simple.pro
include/AdvancedDockingSystem/: API.h  AdvancedDockingSystem.hpp  ContainerWidget.h  DropOverlay.h  FloatingWidget.h  Internal.h  SectionContent.h  SectionContentWidget.h  SectionTitleWidget.h  SectionWidget.h  Serialization.h
persist/: perspectives.ini
recipes/: meta.yaml
sip/: AutoHideDockContainer.sip  AutoHideSideBar.sip  AutoHideTab.sip  DockAreaTabBar.sip  DockAreaTitleBar.sip  DockAreaTitleBar_p.sip  DockAreaWidget.sip  DockComponentsFactory.sip  DockContainerWidget.sip  DockFocusController.sip  DockManager.sip  DockOverlay.sip  DockSplitter.sip  DockWidget.sip  DockWidgetTab.sip  ElidingLabel.sip  FloatingDockContainer.sip  FloatingDragPreview.sip  FloatingOverlay.sip  PushButton.sip  ResizeHandle.sip  ads.sip  ads_globals.sip
sip/linux/: FloatingDockContainer.sip  FloatingWidgetTitleBar.sip
source/: API.cpp  AdvancedDockingSystem.cpp  ContainerWidget.cpp  DropOverlay.cpp  FloatingWidget.cpp  Internal.cpp  SectionContent.cpp  SectionContentWidget.cpp  SectionTitleWidget.cpp  SectionWidget.cpp  Serialization.cpp
src/: AutoHideDockContainer.cpp  AutoHideDockContainer.h  AutoHideSideBar.cpp  AutoHideSideBar.h  AutoHideTab.cpp  AutoHideTab.h  CMakeLists.txt  DockAreaTabBar.cpp  DockAreaTabBar.h  DockAreaTitleBar.cpp  DockAreaTitleBar.h  DockAreaTitleBar_p.h  DockAreaWidget.cpp  DockAreaWidget.h  DockComponentsFactory.cpp  DockComponentsFactory.h  DockContainerWidget.cpp  DockContainerWidget.h  DockFocusController.cpp  DockFocusController.h  DockManager.cpp  DockManager.h  DockOverlay.cpp  DockOverlay.h  DockSplitter.cpp  DockSplitter.h  DockStateSerialization.cpp  DockStateSerialization.h  DockWidget.cpp  DockWidget.h  DockWidgetSideTab.cpp  DockWidgetSideTab.h  DockWidgetTab.cpp  DockWidgetTab.h  DockWidgetTitleBar.cpp  DockWidgetTitleBar.h  ElidingLabel.cpp  ElidingLabel.h  FloatingDockContainer.cpp  FloatingDockContainer.h  (+17 more)
src/linux/: FloatingWidgetTitleBar.cpp  FloatingWidgetTitleBar.h
src/stylesheets/: default-windows.css  default-windows2.css  default.css  default_linux.css  focus_highlighting.css  focus_highlighting_linux.css  modern-windows.css  vendor-partsolutions.css  visual_studio_light.css
test/: CMakeLists.txt
test/source/: TestCore.cpp  TestCore.h  main.cpp
(+26 files in other folders)
